--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* Leaflet CSS - Required for OpenStreetMap */
+@import 'leaflet/dist/leaflet.css';
 @import url('@fontsource/poppins/400.css');
 @import url('@fontsource/poppins/500.css');
 @import url('@fontsource/poppins/600.css');
